--- a/style.css
+++ b/style.css
@@ -144,6 +144,14 @@ h1 {
   background-color: whitesmoke;
 }
 
+/* .skill-logo:hover {
+  transform: scale(1.1);
+} */
+
+.scale:hover {
+  transform: scale(1.1);
+}
+
 .icon > img {
   height: 50px;
 }
@@ -172,4 +180,19 @@ h1 {
 .project-grid > img {
   max-height: 30vh;
   border-radius: 5px;
+}
+
+/* CONTACT */
+.contact > h2 {
+  margin-bottom: 1rem;
+  display: block;
+}
+
+.contact > h1 {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.contact > h2 > a:hover {
+  transform: scale(1.1);
 }
