fixed some margin and positioning issues

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ ul {
 
 a {
   text-decoration: none;
-  /* color: black; */
   color: white;
 }
 
@@ -88,7 +87,8 @@ h1 {
   justify-content: center;
   align-items: center;
   height: 80vh;
-  margin: 3rem 35rem;
+  max-width: 35rem;
+  margin: auto;
 }
 
 .about > img {
