fixed mobile view issues

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 html,
 body {
   font-family: 'Red Hat Mono', monospace;
-  /* color: black; */
   color: white;
   background-color: black;
 }
@@ -16,27 +15,20 @@ body {
 .container {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   margin: 1rem 3rem;
 }
 
 .main-nav {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
 .logo {
   height: 4rem;
 }
-
-/* .static {
-  position: absolute;
-  background-color: black;
-}
-
-.static:hover {
-  opacity: 0;
-} */
 
 ul {
   list-style: none;
@@ -51,9 +43,16 @@ a:hover {
   color: rgb(219, 7, 7);
 }
 
+@media only screen and (max-width: 600px) {
+  .index-img {
+    display: none;
+  }
+}
+
 /* MAIN GIF & TEXT */
 .flex {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: flex-end;
   height: 60vh;
@@ -124,6 +123,17 @@ h1 {
   transform: scale(1.1);
 }
 
+@media only screen and (max-width: 600px) {
+  .about > img {
+    display: none;
+  }
+  .about {
+    max-width: 20rem;
+    margin-top: 4rem;
+    margin-bottom: 5rem;
+  }
+}
+
 /* SKILLS */
 .grid {
   display: flex;
@@ -143,10 +153,6 @@ h1 {
   border-radius: 5px;
   background-color: whitesmoke;
 }
-
-/* .skill-logo:hover {
-  transform: scale(1.1);
-} */
 
 .scale:hover {
   transform: scale(1.1);
@@ -168,6 +174,12 @@ h1 {
 .black {
   color: black;
   text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .grid {
+    margin-bottom: 5rem;
+  }
 }
 
 /* PROJECTS */
@@ -196,4 +208,22 @@ h1 {
 
 .contact > h2 > a:hover {
   transform: scale(1.1);
+}
+
+@media only screen and (max-width: 600px) {
+  .flex {
+    height: 50vh;
+  }
+  .main-contact > img {
+    display: none;
+  }
+  .main-contact {
+    margin-bottom: 5rem;
+  }
+  .main-text {
+    max-width: 25rem;
+  }
+  .main-text > h2 {
+    font-size: 1.3rem;
+  }
 }
